fix z-index for modal

--- a/src/app/open-invoices/open-invoices.component.scss
+++ b/src/app/open-invoices/open-invoices.component.scss
@@ -2379,7 +2379,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2147483647; // ensure on top of any stacking context
+  z-index: 999; // ensure on top of any stacking context
   padding: 1rem;
 }
 
